--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "flask-cors>=6.0.1",
     "google-generativeai>=0.8.5",
     "python-dotenv>=1.1.1",
+    "youtube-transcript-api>=1.2.2",
 ]
 
 [project.scripts]
