--- a/src/crew_blog_app/config/tasks.yaml
+++ b/src/crew_blog_app/config/tasks.yaml
@@ -195,12 +195,10 @@ create_content_calendar:
     - '{resources_path}/path_planner_{research_filename}.md'
     - '{resources_path}/content_reviewer_{research_filename}.md'
 
-    THEN: Create a unified content calendar.
-
-    FINALLY: Save to '{resources_path}/content_calendar_{research_filename}.md' using FileWriterTool.
+   
   expected_output: >
     Provide a structured content calendar to schedule and organize the learning journey for mastering the specified topic from scratch to an advanced level.
-    The content calendar should include the following details for each scheduled task:  
+    The content calendar should include the following details for each scheduled task in the organized table format:  
     - Day /week
     - Topic/Subtopic
     - Resource Type (crash Course, current trend blogs, Article, Video, etc.)
@@ -210,5 +208,7 @@ create_content_calendar:
     - reference github repo link
     - reference video link
     - Estimated Time to Complete (if applicable)
+     FINALLY: Save to '{resources_path}/content_calendar_{research_filename}.md' using FileWriterTool.
     Confirm the file has been created successfully.
+
   
